--- a/dashTeste.css
+++ b/dashTeste.css
@@ -100,7 +100,7 @@ li {
 }
 
 .navbar-global {
-    background-color: rgb(79, 3, 133);
+    background-color: #5500ff;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -111,16 +111,6 @@ li {
     width: 45px; 
 }
 
-.navbar-twobar{
-    height: 52px;
-    width: 1536px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: red;
-    flex-direction: row; 
-
-}
 
 .container-fluid {
     display: flex;
@@ -139,7 +129,7 @@ li {
 }
 
 .navbar-primary {
-    background-color: #333;
+    background-color: #ccc;
     bottom: 0px;
     left: 0px;
     position: absolute;
@@ -175,6 +165,7 @@ li {
     border-top: solid 1px #666;
     font-size: 20px;
     text-align: center;
+    color: #5500ff;
 }
 
 .navbar-global1{
@@ -203,7 +194,7 @@ li {
     padding: 10px 18px;
     text-align: left;
     border-bottom: solid 1px #444;
-    color: #ccc;
+    color: #5500ff;
 }
 
 .navbar-primary-menu li a:hover {
@@ -217,7 +208,7 @@ li {
 }
 
 .navbar-primary-menu li a:hover .glyphicon {
-    color: orchid;
+    color: #5500ff;
 }
 
 .main-content {
@@ -451,20 +442,20 @@ destaque  */
     table-layout: fixed;
   }
   .tbl-header{
-    background-color: rgba(255,255,255,0.3);
+    background-color: #f1f1f1;
    }
   .tbl-content{
     height:300px;
     overflow-x:auto;
     margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
+    border: 1px solid #797979;
   }
   th{
     padding: 20px 15px;
     text-align: left;
     font-weight: 500;
     font-size: 12px;
-    color: #fff;
+    color: #797979;
     text-transform: uppercase;
   }
   td{
@@ -473,8 +464,8 @@ destaque  */
     vertical-align:middle;
     font-weight: 300;
     font-size: 12px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
+    color: #5500ff;
+    border-bottom: solid 1px #797979;
   }
   
   
@@ -482,8 +473,8 @@ destaque  */
   
   @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
   body{
-    background: -webkit-linear-gradient(left, #545856, #b0bcbd);
-    background: linear-gradient(to right, #545856, #b0bcbd);
+    background: -webkit-linear-gradient(left, #f8f8f8, #f1f1f1);
+    background: linear-gradient(to right, #f8f8f8, #f1f1f1);
     font-family: 'Roboto', sans-serif;
   }
   section{
@@ -499,17 +490,17 @@ destaque  */
     text-align: center;
     font-size: 10px;
     font-family: arial;
-    color: #fff;
+    color: #5500ff;
   }
   .made-with-love i {
     font-style: normal;
-    color: #F50057;
+    color: #5500ff;
     font-size: 14px;
     position: relative;
     top: 2px;
   }
   .made-with-love a {
-    color: #fff;
+    color: #5500ff;
     text-decoration: none;
   }
   .made-with-love a:hover {
@@ -523,8 +514,8 @@ destaque  */
       width: 6px;
   } 
   ::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+      -webkit-box-shadow: inset 0 0 6px #737373; 
   } 
   ::-webkit-scrollbar-thumb {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+      -webkit-box-shadow: inset 0 0 6px #737373; 
   }
